// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevUINav tests Snapshot testing with forms list props 1`] = `
<DevUINav
  pathname="/Forms"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-3"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="process-instances-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-9"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="process-instances"
                onClick={[Function]}
                tabIndex={null}
                to="/ProcessInstances"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="process-instances"
                  href="/ProcessInstances"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="process-instances"
                    href="/ProcessInstances"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Processes
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-10"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="jobs-management"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="jobs-management"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-11"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={true}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-12"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;

exports[`DevUINav tests Snapshot testing with jobs management props 1`] = `
<DevUINav
  pathname="/JobsManagement"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-2"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="process-instances-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-5"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="process-instances"
                onClick={[Function]}
                tabIndex={null}
                to="/ProcessInstances"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="process-instances"
                  href="/ProcessInstances"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="process-instances"
                    href="/ProcessInstances"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Processes
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={true}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-6"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="jobs-management"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="jobs-management"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="jobs-management"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-7"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-8"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;

exports[`DevUINav tests Snapshot testing with process list props 1`] = `
<DevUINav
  pathname="/ProcessInstances"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="OUIA-Generated-Nav-1"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={true}
            key="process-instances-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-1"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="process-instances"
                onClick={[Function]}
                tabIndex={null}
                to="/ProcessInstances"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="process-instances"
                  href="/ProcessInstances"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="process-instances"
                    href="/ProcessInstances"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Processes
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="jobs-management-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-2"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="jobs-management"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="jobs-management"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="task-inbox-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-3"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox"
                onClick={[Function]}
                tabIndex={null}
                to="/TaskInbox"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="task-inbox"
                  href="/TaskInbox"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="task-inbox"
                    href="/TaskInbox"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Tasks
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="forms-list-nav"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-4"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="forms-list-nav"
                onClick={[Function]}
                tabIndex={null}
                to="/Forms"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="forms-list-nav"
                  href="/Forms"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="forms-list-nav"
                    href="/Forms"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Forms
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</DevUINav>
`;
